docs/build/iota-sdk/1.0/docs/how-tos/simple-transaction/request-funds.mdx
---
title: Request Funds
description: 'How to programmatically request testnet funds.'
image: /img/logo/iota_mark_light.png
keywords:
  - how to
  - faucet
  - testnet
  - test funds
  - nodejs
  - python
  - rust
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import TipFaucet from '../../_admonitions/_tip-faucet.md';

Once you have [created your account](../accounts-and-addresses/create-account.mdx),
you can start using the IOTA SDK for value transactions. Since these examples target the testnet, you can request funds
using the `request_funds_from_faucet` function.

<TipFaucet />

## Example Code

<Tabs groupId="language" queryString>
<TabItem value="rust" label="Rust">

1. Instantiate a [`Wallet`](https://docs.rs/iota-sdk/latest/iota_sdk/wallet/core/struct.Wallet.html), get Alice's `Account` which was
   [created in the first guide](../accounts-and-addresses/create-account.mdx) and [sync it](../accounts-and-addresses/check-balance.mdx).
2. Get all the [`AccountAddress`](https://docs.rs/iota-sdk/latest/iota_sdk/wallet/account/types/struct.AccountAddress.html)
   related to the `Account` by calling the [`Account.addresses()`](https://docs.rs/iota-sdk/latest/iota_sdk/wallet/account/struct.AccountInner.html#method.addresses)
   function.

<div className={'hide-code-block-extras'}>

```rust reference
https://github.com/iotaledger/iota-sdk/blob/develop/sdk/examples/how_tos/simple_transaction/request_funds.rs#L34
```

</div>

3. Request funds to the `FAUCET_URL` you defined in the `.env` file by calling the [`Client::utils::request_funds_from_faucet`](https://docs.rs/iota-sdk/latest/iota_sdk/client/utils/fn.request_funds_from_faucet.html) function.

<div className={'hide-code-block-extras'}>

```rust reference
https://github.com/iotaledger/iota-sdk/blob/develop/sdk/examples/how_tos/simple_transaction/request_funds.rs#L40-L41
```

</div>

</TabItem>
<TabItem value="typescript-node" label="Typescript (Node.js)">

The following example will:

1. Instantiate a [`Wallet`](https://docs.rs/iota-sdk/latest/iota_sdk/wallet/core/struct.Wallet.html), get Alice's `Account` which was
   [created in the first guide](../accounts-and-addresses/create-account.mdx) and [sync it](../accounts-and-addresses/check-balance.mdx).
2. Retrieve the first address related to Alice's account by calling the
   [`Account.addresses()`](../../references/nodejs/classes/Account.md#addresses) function.

<div className={'hide-code-block-extras'}>

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/develop/bindings/nodejs/examples/how_tos/simple_transaction/request-funds.ts#L31
```

</div>

3. Request funds to the `FAUCET_URL` you defined in the `.env` file by calling the [`Client.requestFundsFromFaucet`](../../references/nodejs/classes/Client.md#requestfundsfromfaucet) function.

<div className={'hide-code-block-extras'}>

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/develop/bindings/nodejs/examples/how_tos/simple_transaction/request-funds.ts#L34-L36
```

</div>

</TabItem>
<TabItem value="python" label="Python">

1. Instantiate a [`Wallet`](https://docs.rs/iota-sdk/latest/iota_sdk/wallet/core/struct.Wallet.html), get Alice's `Account` which was
   [created in the first guide](../accounts-and-addresses/create-account.mdx) and [sync it](../accounts-and-addresses/check-balance.mdx).
2. Get all the [`Addresses`](../../references/python/iota_sdk/types/address.md)
   related to the `Account` by calling the [`Account.addresses()`](../../references/python/iota_sdk/wallet/account.md#addresses)
   function, and then select the first one.

<div className={'hide-code-block-extras'}>

```python reference
https://github.com/iotaledger/iota-sdk/blob/develop/bindings/python/examples/how_tos/simple_transaction/request_funds.py#L19
```

</div>

3. Request funds to the `FAUCET_URL` you defined in the `.env` file by calling the
   [`Client.request_funds_from_faucet`](../../references/python/iota_sdk/client/_utils.md#request_funds_from_faucet)
   function.

<div className={'hide-code-block-extras'}>

```python reference
https://github.com/iotaledger/iota-sdk/blob/develop/bindings/python/examples/how_tos/simple_transaction/request_funds.py#L22
```

</div>

</TabItem>
</Tabs>

### Expected Output

```plaintext
rms1qpjt6zr7rfvl27le5xjcv0qhr90l92wtm6eu6v6jhtgvrjp7mwufq6nqxn8
{"address":"rms1qpjt6zr7rfvl27le5xjcv0qhr90l92wtm6eu6v6jhtgvrjp7mwufq6nqxn8","waitingRequests":11}
```

### Full Example Code

<Tabs groupId="language" queryString>
<TabItem value="rust" label="Rust">

```rust reference
https://github.com/iotaledger/iota-sdk/blob/develop/sdk/examples/how_tos/simple_transaction/request_funds.rs
```

</TabItem>
<TabItem value="typescript-node" label="Typescript (Node.js)">

```typescript reference
https://github.com/iotaledger/iota-sdk/blob/develop/bindings/nodejs/examples/how_tos/simple_transaction/request-funds.ts
```

</TabItem>
<TabItem value="python" label="Python">

```python reference
https://github.com/iotaledger/iota-sdk/blob/develop/bindings/python/examples/how_tos/simple_transaction/request_funds.py
```

</TabItem>
</Tabs>
